--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "keywords": [
     "react;next;server;i18n;redux;axios;"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aiyld/react-next-framework.git"
+  },
   "author": "aiyld@hotmail.com",
   "license": "ISC",
   "dependencies": {
@@ -41,7 +45,7 @@
     "eslint": "^4.13.1",
     "eslint-plugin-react": "^7.5.1",
     "file-loader": "^3.0.1",
-    "react-i18loader": "1.0.2",
+    "react-next-framework": "1.0.2",
     "url-loader": "^1.1.2"
   }
 }
