--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-next-framework",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "An i18n next app with server side rendering",
   "main": "index.js",
   "scripts": {
@@ -50,7 +50,7 @@
     "eslint": "^4.13.1",
     "eslint-plugin-react": "^7.5.1",
     "file-loader": "^3.0.1",
-    "react-next-framework": "1.0.2",
+    "react-i18loader": "^1.0.2",
     "url-loader": "^1.1.2"
   }
 }
